# 07_pyplus_django

./: README.md  pyproject.toml
example/any_app/: apps.py  views.py
example/example/: settings.py
example/templates/: base.html  index.html
mvc/: controllers.py  models.py  views_detail.py  views_list.py
wsgi/: middleware.py  wsgi.py
