[tool.poetry]
name = "07_pyplus_django"
version = "0.1.0"
description = ""
authors = ["Sergey Emelyanov <karagabul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
